cncProd/force-app/main/default/objects/Price_Alert_for_Non_MF__c/Price_Alert_for_Non_MF__c.object-meta.xml
<CustomObject>
    <description>Price Alert Transaction Data for Republic Auto</description>
    <label>Price Alert for Non MF</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Price Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Alerts for Non MF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>