cncProd/force-app/main/default/objects/Price_Alert_for_Non_MF__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Price Alerts for Non MF</relationshipLabel>
    <relationshipName>Price_Alerts_for_Non_MF</relationshipName>
    <type>Lookup</type>
</CustomField>