cncProd/force-app/main/default/objects/Price_Alert_for_Non_MF__c/fields/Latest_Price_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Price_Updated_Date__c</fullName>
    <inlineHelpText>Indicator of the Date of Price Change</inlineHelpText>
    <label>Latest Price Updated Date</label>
    <type>Date</type>
</CustomField>