cncProd/force-app/main/default/objects/Price_Alert_for_Non_MF__c/fields/Sales_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Sales_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Opportunity</label>
    <referenceTo>Sales_Opportunity__c</referenceTo>
    <relationshipName>RA_Price_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>