cncProd/force-app/main/default/objects/Price_Alert_for_Non_MF__c/fields/Vehicle_Stock_Status__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Stock_Status__c</fullName>
    <label>Vehicle Stock Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RA_Vehicle_Status</valueSetName>
    </valueSet>
</CustomField>