cncProd/force-app/main/default/objects/Price_Alert_for_Non_MF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Sales_Opportunity__c</columns>
    <columns>Used_Car_Vehicle_Stock__c</columns>
    <columns>Vehicle_Stock_Status__c</columns>
    <columns>Previous_Price__c</columns>
    <columns>Latest_Price__c</columns>
    <columns>Subscription_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>